# SlowJSON

./: .gitignore  CMakeLists.txt  readme.md
benchmarks/: benchmark_data_access.cpp  benchmark_nested.cpp  benchmark_nested_serialization_deserialization.cpp  benchmark_simple.cpp  benchmark_simple_serialization_deserialization.cpp  benchmarks.cpp  benchmarks.hpp
slowjson/: assert_with_message.hpp  buffer.hpp  concepts.hpp  concetps.hpp  dict.hpp  dict_handler.hpp  dump.hpp  dump_to_string.hpp  dump_to_string_interface.hpp  dynamic_dict.hpp  enum.hpp  indent.hpp  inherit.hpp  key_to_index.hpp  load.hpp  load_from_dict.hpp  load_from_dict_interface.hpp  macro.hpp  ostream.hpp  polymorphic_dict.hpp  serializable.hpp  slowjson.hpp  static_dict.hpp  static_string.hpp  supported.hpp  type_name.hpp  visit.hpp  wrapper.hpp
tests/: test.cpp  test.hpp  test_base_type.cpp  test_binary_search_tree.cpp  test_buffer.cpp  test_deserialization.cpp  test_dict_deserialization.cpp  test_dict_dumps.cpp  test_dict_extract.cpp  test_dict_field_array.cpp  test_dict_loads.cpp  test_dict_modify.cpp  test_dict_serialization.cpp  test_dict_serialization_deserialization.cpp  test_dict_using_static_string.cpp  test_dict_visit.cpp  test_dynamic_dict_visit.cpp  test_enum_serialization_deserialization.cpp  test_floating_point_serialization.cpp  test_function.cpp  test_inherit_deserialization.cpp  test_inherit_serialization.cpp  test_integer_dumps.cpp  test_integral_serialization.cpp  test_list_c_ptr_serialization_deserialization.cpp  test_list_shared_ptr_serialization_deserialization.cpp  test_macro_serialization.cpp  test_merge_dict.cpp  test_non_copy_constructible.cpp  test_non_intrusive_serialization_deserialization.cpp  test_opencv_deserialization.cpp  test_opencv_serialization.cpp  test_pair_tuple_deserialization.cpp  test_polymorphic_deserialization.cpp  test_polymorphic_dict.cpp  test_polymorphic_dict_dumps.cpp  test_polymorphic_field_array.cpp  test_polymorphic_serialization.cpp  test_serializable_oop.cpp  test_serialization.cpp  (+9 more)
